--- a/package.json
+++ b/package.json
@@ -59,7 +59,12 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "@emotion/is-prop-valid": "latest",
-    "framer-motion": "latest"
+    "node-notifier": "latest",
+    "@testing-library/dom": "latest",
+    "framer-motion": "latest",
+    "jest": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
